# free-code

./: .gitignore  README.md  pyproject.toml
free_code/: __init__.py  __main__.py  agent.py  auth.py  cli.py  client.py  config.py  models.py  streaming.py
free_code/context/: __init__.py  discovery.py  repo_map.py  window.py
free_code/tools/: __init__.py  file_ops.py  git_ops.py  list_files.py  search.py  shell.py  test_runner.py
free_code/ui/: diff_view.py  prompt.py  terminal.py
