[project]
name = "freeai-code"
version = "0.1.1"
description = "Free AI coding assistant — open-source Claude Code alternative. pip install freeai-code"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Free.ai", email = "hello@free.ai"}]
keywords = ["ai", "coding", "assistant", "cli", "free", "claude-code", "cursor", "copilot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.25",
    "pyyaml>=6.0",
    "pathspec>=0.11",
    "tiktoken>=0.5",
]

[project.scripts]
free-code = "free_code.cli:main"

[project.urls]
Homepage = "https://free.ai/coder/"
Documentation = "https://free.ai/api/"
Repository = "https://github.com/freeaigit/free-code"
"Bug Tracker" = "https://github.com/freeaigit/free-code/issues"
Changelog = "https://free.ai/changelog/"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["free_code*"]
